# hybrid-mobile-architecture-skill

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  SKILL.md  marketplace.json  opencode.json  plugin.json  versions.toml
apps/knowme-poc/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/knowme-poc/desktop/src-tauri/.cargo/: config.toml
apps/knowme-poc/desktop/src-tauri/.prometheus/: events.jsonl
apps/knowme-poc/desktop/src-tauri/capabilities/: default.json
apps/knowme-poc/desktop/src-tauri/icons/: icon.icns
apps/knowme-poc/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/knowme-poc/rust/: .gitignore  Cargo.toml  bacon.toml  flutter_rust_bridge.yaml  rust-toolchain.toml
apps/knowme-poc/rust/.cargo/: config.toml
apps/knowme-poc/rust/.kbd-orchestrator/: hooks-status.json  hooks.log.jsonl
apps/knowme-poc/rust/.prometheus/: events.jsonl
apps/knowme-poc/rust/.prometheus/consolidation/worktree-wiki-merge/: event-conflicts.json  event-provenance.json
apps/knowme-poc/rust/.prometheus/knowledge/wiki/: android-rust-cross-compile-progress-for-hybrid-mobile-poc.md  android-rust-target-install-during-hybrid-mobile-poc-verification.md  codegen-and-ci-verification-executor-completion-marker.md  codegen-and-ci-verification-executor-session-completion.md  executor-completion-for-hybrid-mobile-codegen-and-ci-phase.md  executor-completion-marker-for-codegen-and-ci-phase.md  executor-completion-marker-for-codegen-and-ci-verification-phase.md  executor-session-completion-for-codegen-and-ci-verification.md  frb-rust-input-fix-for-transparent-poc-bridge-types.md  hybrid-mobile-architecture-poc-phase-goals-and-current-status.md  hybrid-mobile-codegen-and-ci-executor-completion.md  hybrid-mobile-codegen-and-ci-phase-executor-completion.md  hybrid-mobile-codegen-and-ci-verification-completion-marker.md  hybrid-mobile-codegen-and-ci-verification-session-complete.md  hybrid-mobile-poc-android-build-monitor-status-at-assembledebug.md  hybrid-mobile-poc-android-build-reached-gradle-assembledebug.md  hybrid-mobile-poc-codegen-and-ci-verification-session.md  hybrid-mobile-poc-executor-session-completion.md  hybrid-mobile-poc-ios-reboot-verification-next-steps.md  hybrid-mobile-poc-ios-skia-verification-status.md  hybrid-mobile-poc-phase-codegen-and-ci-execution-context.md  hybrid-mobile-poc-phase-goals-and-verification-scope.md  hybrid-mobile-poc-phase-goals-for-codegen-and-ci-verification.md  hybrid-mobile-poc-worktree-cleanup-and-remaining-walkthrough-status.md  index.md  knowme-poc-chat-routing-restored-after-aborted-stale-pr-merge.md  knowme-poc-embedded-engine-lifecycle-fixes.md  knowme-poc-scribe-feature-and-ci-workflow-verification-status.md  knowme-poc-surrealdb-relate-error-handling-and-endpoint-fix.md  log.md  prometheus-entity-management-universal-platform-evolution-status.md  surrealdb-core-rebuild-delayed-hybrid-mobile-poc-verification.md  surrealdb-relate-parameter-fix-for-graph-expand-c-111.md  t8-resume-status-for-hybrid-mobile-poc-codegen-verification.md
apps/knowme-poc/rust/crates/gen_ui_agent/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_agent/src/: chat.rs  config.rs  config_resolve.rs  error.rs  lib.rs  memory.rs  provider_admin.rs  registry.rs  secret.rs  secrets.rs  state.rs  sync_sink.rs  tools.rs
apps/knowme-poc/rust/crates/gen_ui_agent/tests/: local_inference_live.rs  local_lane_guard.rs  ollama_live.rs
apps/knowme-poc/rust/crates/gen_ui_audio/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_audio/src/: error.rs  lib.rs  model.rs  recorder.rs  transcribe.rs
apps/knowme-poc/rust/crates/gen_ui_client/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_client/src/: lib.rs
apps/knowme-poc/rust/crates/gen_ui_client/tests/: it.rs
apps/knowme-poc/rust/crates/gen_ui_db/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_db/src/: lib.rs
apps/knowme-poc/rust/crates/gen_ui_db/tests/: it.rs
apps/knowme-poc/rust/crates/gen_ui_db_graph/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_db_graph/src/: config.rs  corpus.rs  embed.rs  error.rs  lib.rs  rag.rs  rrf.rs  schema.rs  store.rs  sync.rs
apps/knowme-poc/rust/crates/gen_ui_db_graph/tests/: corpus_seed.rs
apps/knowme-poc/rust/crates/gen_ui_ffi/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_ffi/src/: api.rs  lib.rs
apps/knowme-poc/rust/crates/gen_ui_host/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_host/src/: lib.rs
apps/knowme-poc/rust/crates/gen_ui_inference/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_inference/src/: lib.rs  mistral.rs
apps/knowme-poc/rust/crates/gen_ui_mcp/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_mcp/src/: jsonrpc.rs  lib.rs  registry.rs  sse_transport.rs
apps/knowme-poc/rust/crates/gen_ui_protocol/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_protocol/src/: lib.rs
apps/knowme-poc/rust/crates/gen_ui_runtime/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_runtime/src/: lib.rs  native.rs  web.rs
apps/knowme-poc/rust/crates/gen_ui_server_axum/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_server_axum/src/: lib.rs
apps/knowme-poc/rust/crates/gen_ui_types/: Cargo.toml
apps/knowme-poc/rust/crates/gen_ui_types/src/: config.rs  content_block.rs  error.rs  events.rs  inference.rs  lib.rs  sync.rs  transport.rs  view.rs
apps/knowme-poc/rust/crates/gen_ui_wasm/: Cargo.toml  build-wasm.sh
apps/knowme-poc/rust/crates/gen_ui_wasm/src/: lib.rs
apps/knowme-poc/rust/crates/knowme-web-server/: Cargo.toml  build.rs
apps/knowme-poc/rust/crates/knowme-web-server/src/: main.rs
apps/knowme-poc/rust/crates/tauri-plugin-gen-ui/: Cargo.toml  build.rs
apps/knowme-poc/rust/crates/tauri-plugin-gen-ui/guest-js/: README.md  package.json  pnpm-lock.yaml
apps/knowme-poc/rust/crates/tauri-plugin-gen-ui/permissions/: default.toml  write.toml
apps/knowme-poc/rust/crates/workspace-hack/: Cargo.toml
assets/templates/rust/gen_ui_inference/: Cargo.toml
assets/templates/rust/gen_ui_inference/src/: lib.rs  llama.rs
openspec/changes/2026-07-15-c002-wasm32-spike/spike-artifacts/db_wasm_spike/: Cargo.toml
(+1435 files in other folders)
