[package]
name = "knowme-poc"
version = "0.1.0"
edition = "2021"

[lib]
name = "knowme_poc"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-gen-ui = { path = "../../rust/crates/tauri-plugin-gen-ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
