[package]
name = "gen_ui_db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
gen_ui_types   = { path = "../gen_ui_types" }
gen_ui_runtime = { path = "../gen_ui_runtime" }
async-trait.workspace = true
anyhow.workspace      = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
futures.workspace     = true
tracing.workspace     = true
sqlx.workspace        = true
refinery.workspace    = true
reqwest.workspace     = true
pglite-oxide = { workspace = true, optional = true }
virtual-net = { workspace = true, optional = true }

[features]
# Desktop (Tauri) uses pglite-oxide; web drives PGlite from the TS side against
# the same Postgres-dialect schema. Mobile does NOT use this crate's relational
# store — it uses the embedded SurrealDB instance in gen_ui_db_graph. No sqlite
# backend: one embedded-DB story per platform (pglite-oxide desktop / PGlite web
# / SurrealDB mobile), not three.
default = []
pg = ["sqlx/postgres"]
pglite = ["pg", "dep:pglite-oxide", "dep:virtual-net"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio        = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
